--- a/package.json
+++ b/package.json
@@ -8,5 +8,18 @@
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mbMAV/weather-journal-app1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mbMAV/weather-journal-app1/issues"
+  },
+  "homepage": "https://github.com/mbMAV/weather-journal-app1#readme",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1"
+  }
 }
